## if build test is specified, we build the tests
IF (BUILD_TEST)
    ENABLE_TESTING()
    message("Build testing")
    find_package(doctest)
    FILE(GLOB_RECURSE TEST_SRC ${CMAKE_SOURCE_DIR}/tests/*.cpp)
    ADD_EXECUTABLE(test_jsBridgePP ${TEST_SRC})
    TARGET_INCLUDE_DIRECTORIES(test_jsBridgePP PUBLIC ${CMAKE_SOURCE_DIR})
    SET_TARGET_PROPERTIES(test_jsBridgePP PROPERTIES LINKER_LANGUAGE CXX)
    ADD_TEST(main test_jsBridgePP)
ENDIF()